1) Added Crystallise ElementalReaction. 2) Modified challenge to now use the same WorldChallenge (removed subclass FatherChallenge and ChildChallenge). 3) Added missing elemental reaction handler in ability manager. 4) Reused more challenge factory handler and challenge trigger 4) Modified other files accordingly.